--- a/MyMV/app/src/main/AndroidManifest.xml
+++ b/MyMV/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ManageVehicle"></activity>
+        <activity android:name=".ManageVehicle" />
+        <activity android:name=".UpdateActivity"></activity>
     </application>
 
 </manifest>
