--- a/MyMV/app/src/main/AndroidManifest.xml
+++ b/MyMV/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +28,9 @@
         </activity>
         <activity android:name=".ManageVehicle" />
         <activity android:name=".UpdateActivity" />
+        <activity android:name=".ListDevicesActivity"
+            android:label="stuffs"
+            android:theme="@style/Theme.AppCompat.Dialog"/>
 
         <receiver android:name=".NotificationReceiver" />
 
