--- a/MyMV/app/src/main/AndroidManifest.xml
+++ b/MyMV/app/src/main/AndroidManifest.xml
@@ -28,8 +28,9 @@
         </activity>
         <activity android:name=".ManageVehicle" />
         <activity android:name=".UpdateActivity" />
+        <activity android:name=".ImportExportActivity"/>
         <activity android:name=".ListDevicesActivity"
-            android:label="stuffs"
+            android:label="Bluetooth devices"
             android:theme="@style/Theme.AppCompat.Dialog"/>
 
         <receiver android:name=".NotificationReceiver" />
