--- a/MyMV/app/src/main/AndroidManifest.xml
+++ b/MyMV/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".ManageVehicle" />
         <activity android:name=".UpdateActivity" />
+        <activity android:name=".VehicleMaintenance"/>
         <activity android:name=".ImportExportActivity"/>
         <activity android:name=".ListDevicesActivity"
             android:label="Bluetooth devices"
