--- a/MyMV/app/src/main/AndroidManifest.xml
+++ b/MyMV/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ManageVehicle" />
         <activity android:name=".UpdateActivity" />
         <activity android:name=".VehicleMaintenance"/>
+        <activity android:name=".StatisticsPieChart"/>
         <activity android:name=".ImportExportActivity"/>
         <activity android:name=".ListDevicesActivity"
             android:label="Bluetooth devices"
